--- a/programs/whirlpool/Cargo.toml
+++ b/programs/whirlpool/Cargo.toml
@@ -18,8 +18,10 @@ default = []
 anchor-lang = "0.29"
 anchor-spl = {version = "0.29", features = ["metadata", "memo"]}
 spl-token = {version = "4", features = ["no-entrypoint"]}
-spl-transfer-hook-interface = "0.5.1"
-solana-program = "1.17"
+#spl-transfer-hook-interface = "0.3.0"
+spl-transfer-hook-interface = "0.5.0"
+#spl-transfer-hook-interface = "0.6.3"
+solana-program = "1.16.18"
 thiserror = "1.0"
 uint = {version = "0.9.1", default-features = false}
 borsh09 = {package = "borsh", version = "0.9.1"}
