--- a/programs/whirlpool/Cargo.toml
+++ b/programs/whirlpool/Cargo.toml
@@ -18,11 +18,12 @@ default = []
 anchor-lang = "0.29"
 anchor-spl = {version = "0.29", features = ["metadata", "memo"]}
 spl-token = {version = "4", features = ["no-entrypoint"]}
-solana-program = "1.16.18"
+solana-program = "1.18.16"
 #spl-transfer-hook-interface = "0.5.0"
 thiserror = "1.0"
 uint = {version = "0.9.1", default-features = false}
-borsh09 = {package = "borsh", version = "0.9.1"}
+#borsh09 = {package = "borsh", version = "0.9.1"}
+borsh = "0.10.3"
 solana-security-txt = { version = "=1.1.1" }
 
 [dev-dependencies]
